[package]
name = "wasm_musical_notes"
version = "0.0.1"
authors = ["Taylor Growden <taylorgrowden@gmail.com>"]
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.45"

[dependencies.web-sys]
version = "0.3.22"
features = [
  'AudioContext',
  'AudioDestinationNode',
  'AudioNode',
  'AudioParam',
  'GainNode',
  'OscillatorNode',
  'OscillatorType'
]
